versioned_docs/version-4.2.0/系统扩展指南/扩展例子.md

import useBaseUrl from '@docusaurus/useBaseUrl';

## 终端脚本

### 打开作业组直接跳到指定作业

#### 需求描述

作业组中根据指定的作业名跳转到该作业

#### 脚本代码

* 适用于配置逻辑中的脚本，不支持打开脚本、关闭脚本及显示后脚本

```js

var curAllTasks = ScriptEngine.Context.GetCurTasks();
if (curAllTasks && curAllTasks.length > 0) {
 var needJumpTask = _.find(curAllTasks, function(_task){
  return _task.Name == '跳转的作业名';
 });
 if(needJumpTask){
  page.executeTaskTree.JumpTask(needJumpTask);  
 }
}
return true;

```

* 适用于待执行，执行中的作业组脚本

```js

var curAllTasks = ScriptEngine.Context.GetCurTasks();
if (curAllTasks && curAllTasks.length > 0) {
 var needJumpTask = _.find(curAllTasks,function(_task){
  return _task.Name == '跳转的作业名';
 });
 if (needJumpTask) {
  var taskGroup = ScriptEngine.Context.curTaskGroup;
  if (taskGroup.Status != JobStatus.New) {
   GlobalInfo.SetTaskGroupTaskParentID(taskGroup.ID, taskGroup.SequenceID, needJumpTask.ParentTaskID);
   GlobalInfo.SetTaskGroupTaskID(taskGroup.ID, taskGroup.SequenceID, needJumpTask.ID);
  }
 }
}
return true;

```

### 根据物料名和物料属性获取指定物料属性值

#### 需求描述

根据物料的名称和物料属性的名称获取该物料的属性值，返回为数组

#### 脚本代码

* 适用于作业项属性中的可选项脚本

```js

var resultName = ScriptEngine.GetResultName();
var materielID = 'fa4bbc96-0f8c-4f15-976a-b1022c0b5920';
var materielPropertyName = '出库原则';
var materielName = '软垫－消声器';
ScriptEngine.GetAjaxToApiServer('Report', 'GetCustomReportColumn', 'id=' + materielID, null, 'get', function (_result) {
  if(_result && _result.ColumnList && _result.ColumnList.length > 0){
    var find = _result.ColumnList.find(function(_col){return _col.Title == materielPropertyName});
    if(find){
      var field = find.Field;
      var isCustomData = false;
      if(field && field.indexOf('CustomData_') > -1){
        field = field.substring(11);
        isCustomData = true;
      }
      ScriptEngine.GetAjaxToApiServer('Materiel', 'GetByName', 'name='+materielName, null, 'get',function(_response){
        var list = [];
        if(_response){
          if(isCustomData && _response['CustomData'] && typeof _response['CustomData'][field] != 'undefined'){ 
            var value = _response['CustomData'][field];
            list.push(value);
          }else if(typeof _response[field] != 'undefined') {
            var value = _response[field];
            list.push(value);
          }
        }
        ScriptEngine[resultName] = list;
      });
    }else{
      ScriptEngine[resultName] = [];
    }
  }else{
    ScriptEngine[resultName] = [];
  }
});
return { 'ResultName':resultName};

```

### 根据作业状态检查的值，自动填写作业项的值

#### 需求描述

作业项上是配置了状态检查的作业，根据状态检查的值，自动填写作业项的值

#### 脚本代码

* 适用于作业项逻辑中的执行脚本

```js

var task = ScriptEngine.Context.curParentTask;
if(task){
  if(task.Tags && task.Tags.length > 0){
    if(task.Tags[0].Value =='c95ce17b-313c-4097-8c2f-6169ae98cb7d'){    //自定义列表中特护运行的ID
      ScriptEngine.Context.SetTaskAttributeValue(contextID,'Value','1')
    } else{
      ScriptEngine.Context.SetTaskAttributeValue(contextID,'Value','3')
    }  
  }
}
return true;

```

### 智能电子锁开锁配置

#### 需求描述

作业项为智能电子锁的开锁，使用此脚本实现开锁

#### 脚本代码

* 适用于作业项逻辑中的执行脚本

```js
// 通过关联关系，找到指定的锁，进行开锁
var resultName = ScriptEngine.GetResultName();
ScriptEngine.Context.UnSmartLock('', function(_result){   //新一代为UnSmartLock2
    ScriptEngine[resultName] = _result;
});
return { 'ResultName':resultName};

```

### 更新作业关联资产的指定资产属性值

#### 需求描述

更新作业所关联的资产中数据类型为日期时间的指定资产属性的值

#### 脚本代码

* 适用于作业项逻辑中的执行脚本

```js

var resultName = ScriptEngine.GetResultName();
var assetID = ScriptEngine.Context.GetTaskAssetID(ScriptEngine.Context.GetCurTask())
Common.AjaxToApiServer('Asset', 'GetAssetProperty', 'assetID='+assetID+'&propertyName=上次作业开始时间', '', 'get', function (_isOk, _msg, _result) {
 if(_result){
  var now = new Date();
  var value = now.toString('yyyy-MM-dd HH:mm:ss');
  Common.AjaxToApiServer('Asset', 'UpdateAssetPropertyValue', 'propertyID='+_result.ID+'&propertyValue=' + value, '', 'put', function (_isOk, _msg, _result) {
   ScriptEngine[resultName] = _isOk;
  });
 }
 else{
  ScriptEngine[resultName] = false;
 }
});
return { 'ResultName':resultName};

```

### 打开作业组直接跳转到作业组属性页面

#### 需求描述

打开作业组时直接跳转到作业组属性页面的显示后脚本

#### 脚本代码

* 适用于作业组配置中的显示后脚本

```js

if(window.showScriptIndex === 1){
 return true;
}
window.showScriptIndex = 1;
var setIconHtml = function(){
  return function(){
    if(executeTaskTree)
  executeTaskTree.SetIconHtml();
  }
}
var completeTask = function(){
  return function (_isSave, _value, _isNotupdateDisplay, _isNotNext) {
  var task = ScriptEngine.Context.GetCurTask();
    if(executeTaskTree)
  executeTaskTree.CompleteTaskAndNext(task, _isSave, _value, !_isNotupdateDisplay, false, _isNotNext);
 }
}
var curTaskChanged = function(_callback){
  return function () {
  executeTaskInfo.CurTaskChanged(_callback);
 }
}
var jsonParseSafe = function (str) {
  var res = null;
  try {
    if ((str.indexOf('{') >= 0 && str.indexOf('}') > 0) || str.indexOf('[') >= 0 && str.indexOf(']') > 0) {
      res = JSON.parse(str);
    }
  }
  catch (e) {
    res = null;
  }
  return res;
}

var tasks = ScriptEngine.Context.GetCurTasks();
if(GlobalInfo.GetTaskGroupPageModel() == "auto"){
  tasks = 
}
var selectedTask = _.find(tasks, function (_task) { return _task.Name == '入库1' });
var executeTaskInfo = new ExecuteTaskInfo(ScriptEngine.Context, completeTask(), setIconHtml());
executeTaskInfo.inputValueBox = new InputValueBox('valueName',0);
executeTaskInfo.inputValueBox.executeTaskCommon = ScriptEngine.Context;
var executeTaskTree = new ExecuteTaskTree(ScriptEngine.Context, 'divTaskTree', curTaskChanged( function () { }), null,null,null);
executeTaskTree.JumpTask(selectedTask,selectedTask.ID);
if(selectedTask){
var tag = selectedTask['Tags'][0];
  var data = {
    Json: tag && tag.DefaultValue ? jsonParseSafe(tag.DefaultValue) : '',
    jsonFormat: tag && tag.Format ? jsonParseSafe(tag.Format) : '',
    task: selectedTask,
    title: selectedTask.Name,
    inputID: 'customInputValue0'
  }
  var curView = plus.webview.currentWebview();
  mui.openWindow({
   url: 'JsonEditorView.html',
   id: Common.NewGuid(),
   extras: {
     parentViewID: curView.id,
     data: data
   },
   createNew: false
 });
}
return true;

```

### 根据资产名获取的资产号值赋值给作业项默认值的脚本

#### 需求描述

根据资产名获取的资产号值，把值赋给作业项默认值

#### 脚本代码

* 适用于作业项逻辑中的执行脚本

```
var resultName = ScriptEngine.GetResultName();
ScriptEngine.GetAjaxToApiServer('Asset', 'GetAssets', '', null, 'get',function(_result){
 var find = _.find(_result,function(_item){return _item.Name == '新资产1'});
 if(find){
  ScriptEngine[resultName] = find.ID;
  ScriptEngine.Context.SetTaskAttributeValue(contextID,'Value',find.ID)
 }
});

return { 'ResultName':resultName};

```

### 判断当前登陆人可执行作业组数量大于5时返回ture

#### 需求描述

计算终端当前登录人员可执行的作业组数量并判断，大于5时返回ture，未接受不算在内

#### 脚本代码

* 适用于作业组的打开脚本

```
var resultName = ScriptEngine.GetResultName();
var result = false;
ScriptEngine.GetLoginUser(function (_result) {
  console.log(_result);
  if (_result && _result.UserID) {
    ScriptEngine.GetAjaxToApiServer('UserConfig', 'GetRoles', 'userID=' + _result.UserID, '', 'get', function (_result) {
      console.log(_result);
      var roleIDList = [];
      if (_result && _result.length > 0) {
        _.each(_result, function (_oneRole) {
          roleIDList.push(_oneRole.ID);
        })
      }
      try {
        var daAccess = new DAAccess();
        var daTaskGroup = daAccess.GetDA(SyncEntity.TaskGroup);
        daTaskGroup.GetByUserGroupID(roleIDList, function (_isSuccess, _taskGroups) {          
          if (_isSuccess) {
            var filters = _.filter(_taskGroups, function (_taskGroup) {
              if (_taskGroup.RelatedSequenceList && _taskGroup.RelatedSequenceList.length > 0) {
                //已接受且不是已执行状态
                return _.find(_taskGroup.RelatedSequenceList, function (_item) { return ((_item['IsRobTask'] && _item['RobTaskPersonID'] != Common.GuidEmpty) || !_item['IsRobTask']) && _item['SequenceStatus'] != 3 });
              } else {
                return false
              }
            })
            result = filters && filters.length > 5 ? true : false;
          } else {
            alert('获取作业组失败');
          }
          alert('结果 = ' + result);
          alert('可执行的作业组个数 = ' + filters.length);
          ScriptEngine[resultName] = result;
        })
      } catch (e) {
        alert(e.message);
        ScriptEngine[resultName] = result;
      }
    });

  } else {
    alert('结果 = ' + _isSuccess);

    ScriptEngine[resultName] = result;
  }
});
return { 'ResultName': resultName };

```

### 根据设备的运行时长，自动计算出润滑寿命

#### 需求描述

设备运行时长最高为300小时，超过需进行润滑保养，根据300-运行时长属性值，自动计算出润滑寿命作业项的值

#### 脚本代码

* 适用于作业项的默认值表达式

```
var resultName = ScriptEngine.GetResultName();
var assetID = ScriptEngine.Context.GetTaskAssetID(ScriptEngine.Context.GetCurTask())
if(!assetID){
  assetID= '12aab825-b7e5-4610-91af-d782ba0239e0' //资产ID
}
ScriptEngine.GetAjaxToApiServer('Asset', 'GetLatestTimeseries', 'assetID='+assetID+'&attrNames=运行时长', '', 'get', function (_result) {
 var value = 300;
 alert('运行时长' + _result['运行时长']['Value'])
 if (_result && _result['运行时长'] && _result['运行时长']['Value']) {
  value = 300 - (_result['运行时长']['Value'])
 }
 ScriptEngine.Context.SetTaskAttributeValue(contextID,'Value',value.toString());
 ScriptEngine[resultName] = value.toString();
});
return { 'ResultName':resultName};

```

### 动火作业中，判断具有MAC地址的定位终端是否在围栏内

#### 需求描述

在动火作业中，结合定位系统，判断有MAC地址的定位终端是否在绘制的动火区域围栏内

#### 脚本代码

* 适用于作业条件脚本、作业项逻辑执行脚本、作业组打开脚本

```
var joySuchAjaxToApiServer = function (_action, _urlParameters, _data, _method, _callback) {
  try {
    var _urlParameters = (_urlParameters) ? _urlParameters : '';
    var _method = (_method) ? _method : 'get';
    var _data = (_data) ? _data : null;

    var url = 'http://192.168.125.194:46000';
    if (_action) {
      url += '/' + _action
    }
    if (_urlParameters)
      url += '?' + _urlParameters;
    var ajaxOptions = {
      type: _method,
      contentType: 'application/json; charset=utf-8',
      data: _data,
      url: url,
      timeout: 100000, //超时时间：10秒
      dataType: 'json',
      success: function (_result, _textStatus, _jqXHR) {
        if (_result.errorCode == 0) {
          _result.IsOk = true;
          _result.Response = _result.data;
        } else {
          _result.IsOk = false;
        }

        _callback(_result.IsOk, _result.errorMsg, _result.Response);
      },
      error: function (_jqXHR, _textStatus, _errorThrown) {
        if (_callback)
          _callback(false, '请求失败');
      }
    }
    if (_action != 'getAccessTokenV2') {
      ajaxOptions.headers = {
        Authorization: joySuchToken//这里是Token
      }
    }
    $.ajax(ajaxOptions);
  } catch (e) {
    if (_callback)
      _callback(false, e.message);
  }
}

var setJoySuchToken = function (_callback) {
  var data = {
    'licence': 'd63a6557aa5fe703cefc5cc50f846895'//'5bb6bfae7eeb4cdd8d9099fc05a9d379'  // 固定
  }
  joySuchAjaxToApiServer('getAccessTokenV2', '', JSON.stringify(data), 'post', function (_isOk, _errMsg, _result) {
    if (_isOk) {
      joySuchToken = _result.token;
      refreshToken = _result.refreshToken
      tokenEffectiveTs = _result.startTime + _result.expiresIn * 1000
    }
    _callback()
  })
}

// 获取资产外部标签
var getAssetTag = function (_assetName, _callback) {
  var mac = ''
  Common.AjaxToApiServer('Asset', 'GetAllExtTags', '', null, 'GET', function (_isOk, _msg, _response) {
    if (_isOk) {
      var find = _.find(_response, function (_item) { return _item.AssetName == _assetName && _item.APName == 'MAC地址' });
      if (find) {
        mac = find.ExtTag;
      }
    } else {
      alert('获取资产外部标签失败，失败的原因为：' + _msg);
    }
    _callback(mac)
  })
}


var resultName = ScriptEngine.GetResultName();
var joySuchToken = '';
var refreshToken = '';
var tokenEffectiveTs = '';
var railID = ScriptEngine.Context.GetTaskGroupPropertyValue('围栏ID')// 围栏ID

getAssetTag('定位胸牌1', function (_mac) {
  if (_mac) {
    setJoySuchToken(function () {
      var condition = {
        'buildId': '203498',   // 固定            
        'railId': railID
      }
      joySuchAjaxToApiServer('WebLocate/locateByRail', 'accessToken=' + joySuchToken, JSON.stringify(condition), 'post', function (_isOk, _errMsg, _result) {
        if (_isOk && _result && _result['recordList']) {
          var find = _.find(_result['recordList'], function (_item) { return _item.userId == _mac });
          if (!find) {
          for(var i = 0;i<1000;i++){
            alert('不在动火作业范围内');
          }
          }
        } else {
         for(var i = 0;i<1000;i++){
            alert('不在动火作业范围内');
          }
        }
        ScriptEngine[resultName] = _mac;
      })
    })
  } else {
    alert('未获取到当前MAC地址');
    ScriptEngine[resultName] = _mac;
  }

})
return { 'ResultName': resultName };

```

### 一个json类型作业项中某属性相加赋给另一作业项默认值

#### 需求描述

将一个json类型作业项中的某属性相加后赋给另一作业项默认值

#### 脚本代码

* 适用于作业项的默认值表达式

```js
var tasks = ScriptEngine.Context.curTasks;
var lastTask = _.find(tasks,function(_item){return _item['Name'] == '作业项1'});
var defaultValue = 0;
if(lastTask && lastTask.Tags && lastTask.Tags[0]['Value']){
    var value = lastTask.Tags[0]['Value'];
    if(value){
        var obj = JSON.parse(value);
        if(obj && obj['操作项'] &&obj['操作项'].length > 0){
            _.each(obj['操作项'],function(_item){
                if(_item['标准价格']){
                    defaultValue+=Number(_item['标准价格']);
                }
            })
        }
    }
}
return String(defaultValue);

```

### 获取指定作业项值，更新到指定作业组属性

#### 需求描述

Json作业的作业项值更新到作业组属性“收集明细”和“入库明细”JSON类型的项里。有多个数组。

#### 脚本代码

* 适用于作业项的逻辑脚本

```js
var tasks = ScriptEngine.Context.GetCurTasks();
var taskTemplateID = '74d6c057-c44b-4b68-826e-2ca71f2b84f3';
var findTask = _.find(tasks, function (_task) { 
     return _task['Name'] == '出库列表' && _task['EditTemplateID'] == taskTemplateID 
 });
 if (findTask) {
      var taskValue = (findTask['Tags'] && findTask['Tags'][0]) ? findTask['Tags'][0]['Value'] : '';
      ScriptEngine.Context.SetTaskGroupPropertyValue('收集明细', taskValue);
ScriptEngine.Context.SetTaskGroupPropertyValue('入库明细', taskValue);
}
return true;

```

### 根据资产号，获取指定资产属性值

#### 需求描述

根据资产号，获取指定资产属性值

#### 脚本代码

* 适用于作业项的逻辑脚本

```js
var resultName = ScriptEngine.GetResultName();
ScriptEngine.GetAjaxToApiServer('Asset', 'GetByMark', 'mark=智能锁1', null, 'get',function(_result){
 if(_result){
  var assetID = _result.ID;
  var assetName= _result.Name;
  var assetPropertyName = '是否';
  var urlParams = 'assetID=' + assetID + '&propertyName=' + assetPropertyName;
  ScriptEngine.GetAjaxToApiServer('Asset', 'GetAssetProperty', urlParams, null, 'get',function(_assetProperty){
   var propertyValue = '';
   if(_assetProperty){
    propertyValue = _assetProperty.CurrentValue;
   }
   ScriptEngine[resultName] = propertyValue;
  })
 }else{
  ScriptEngine[resultName] = '';
 }
});
return { 'ResultName':resultName};

```

### 根据当前作业项值找到当天指定作业组的类型

#### 需求描述

根据当前作业项编号值，找到当天指定作业组的类型

#### 脚本代码

* 适用于作业项的逻辑脚本

```js
var resultName = ScriptEngine.GetResultName();
var noValue = ScriptEngine.Context.GetTaskAttributeValue(contextID, 'Value');
var today = Common.FormatDateTimeByFormat('yyyy-MM-dd', new Date());
var templateName = '模拟医废'
var bodyParams = [
    {
        'ColumnName': '',
        'Sign': 7,
        'SubqueryList': [
            {
                'ColumnName': 'TaskGroupTemplateName',
                'Sign': 1,
                'Value': templateName
            }, 
            {
                'ColumnName': 'StartTime',
                'Sign': 1,
                'Value': today
            }
        ]
    }
]
ScriptEngine.GetAjaxToApiServer('Report', 'GetTaskGroupPropertyList', '', JSON.stringify(bodyParams), 'post', function (_result) {
 var type = '';
 alert(JSON.stringify(_result.Rows));
 if (_result && _result.Rows && _result.Rows.length > 0) {
  console.log(_result);
  var index = -1;
  _.each(_result.Columns,function(_item,_index){
   if(_item['ColumnName'] == 'PropertyValues'){
    index = _index;
   }
  })
  if(index >-1){
   var find = _.find(_result.Rows,function(_item){
    if(_item['Cells'][index]){
     var propertiesObj = JSON.parse(_item['Cells'][index]);
     if(propertiesObj['入库明细']){
      var onePropertyValueList = JSON.parse(propertiesObj['入库明细']);
      return _.find(onePropertyValueList,function(_oneObjValue){
       return _oneObjValue['编号'] == noValue
      })  
     }
    }else{
     return false;
    }
   })
   if (find) {
    var propertiesObj = JSON.parse(find['Cells'][index]);
    var inventoryDetailValue = JSON.parse(propertiesObj['入库明细']);
    var oneItem = _.find(inventoryDetailValue,function(_oneObjValue){
     return _oneObjValue['编号'] == noValue
    })
    type = oneItem['类型'];
   }
  }
 }
 ScriptEngine[resultName] = type;
});
return { 'ResultName': resultName };

```

### 比较json字符串类型作业项中两项的值，数量不同时提醒

#### 需求描述

json字符串类型的作业项，第一项为列表，第二项第三项为数值，当第二项第三项的值不相同时，发出提醒，内容为列表名称+数量错误

#### 脚本代码

* 适用于作业项逻辑中的脚本条件

```js
var Value = ScriptEngine.Context.GetTaskAttributeValue(contextID, 'Value');
var resultName = ScriptEngine.GetResultName();
ScriptEngine.GetAjaxToApiServer('UserDefinedList', 'GetChild', 'parentID=603c66f6-d32e-4314-af1f-6d5e0320a94e', '', 'get', function (_result) {
    var test = '';
    if (Value) {
        var obj = JSON.parse(Value);
        _.each(obj, function (_item) {
            if (_item['工作前数量'] != _item['出清数量']) {
          var find = _.find(_result, function (__item) { return __item.ID == _item['名称'] });
                if (find) {
                    test += find['Name'] + '数量错误！'
                }
            }
        })
    }
    if (test) {
        alert(test);
    }
});

return { 'ResultName': resultName };
```

### 将逻辑拍照的照片复制到某个文件类型的作业组属性中

#### 需求描述

作业项触发逻辑拍照后，通过脚本将照片复制到指定的类型为文件的作业组属性中

#### 脚本代码

* 适用于作业项逻辑中的执行脚本

```js
var curTask = ScriptEngine.Context.GetCurTask();
var logicID = '';
if(curTask && curTask.Logics && curTask.Logics.length>0){ 
 _.each(curTask.Logics,function(_logic){  
  if(_logic.ActionType == 14 && _logic.LogicAction && _logic.LogicAction.NumberOfPhoto){  
   logicID = _logic.ID;
  }
 });
}
if(logicID){
 var resultName = ScriptEngine.GetResultName();
 ScriptEngine.Context.GetAttachmentsByEntityID(logicID,function(images){

  var files = [];
  _.each(images,function(_image){
   files.push({'ID':_image.ID,'Name':_image.Name,'Source':'File','Ext':_image.Format});
  });
  var value = JSON.stringify(files);

  ScriptEngine.Context.SetTaskGroupPropertyValue('现场图片',value) //现场图片为作业组属性名
  ScriptEngine[resultName] = value;
 });
 return {'ResultName':resultName};
}
else{
 ScriptEngine.Context.SetTaskGroupPropertyValue('现场图片','');
 return true;
}
```

### 终端json里修改值后脚本可以自动新增一个json数组

#### 需求描述

终端作业项和作业组属性数据类型为json字符串时，修改值后脚本可以自动新增一个json数组(终端及web通用)

#### 脚本代码

* 适用于json作业项和作业组属性更多设置中的修改值后脚本

```
var isWeb = window.SysCommon && !window.SysCommon.IsMobileDevices();
if (window.SysCommon && !window.SysCommon.IsMobileDevices()) {
    $('.addEmptyJsonData').trigger('click');
} else {
    $('.addEmptyJsonData').trigger('tap');
}
return true;
```

### 终端json里修改值后脚本可以将光标跳转到下一项或指定名称的项

#### 需求描述

终端作业项和作业组属性数据类型为json字符串时，修改值后脚本可以将光标跳转到下一项或指定名称的项(终端及web通用)

#### 脚本代码

* 适用于json作业项和作业组属性更多设置中的修改值后脚本

```
var itemName = 'xxx'  // 如果是当前项的下一项设置'';制定某一项改为指定项的名称
if (window.SysCommon && !window.SysCommon.IsMobileDevices()) {
    var needFocusItemDom = null;
    if (itemName) {
        var jsonItems = $('#' + contextID).parents('.jsonObject').find('.form-group.propertyRow');
        needFocusItemDom = _.find(jsonItems, function (_item) { return $(_item).attr('propertyname') == itemName });
    } else {
        var curItemIndex = $('#' + contextID).index();
        var nextItemIndex = curItemIndex + 1;
        needFocusItemDom = $('#' + contextID).parents('.jsonObject').find('.form-group.propertyRow:eq(' + nextItemIndex + ')')[0];
    }
    if (needFocusItemDom) {
        if ($(needFocusItemDom).find('textarea').length > 0) {
            $(needFocusItemDom).find('textarea').focus();
        } else {
            $(needFocusItemDom).find('input').focus();
        }
    }
} else {
    var needFocusItemID = '';
    if (itemName) {
        var oneGroupJsonTitleDoms = $('.clickSelected').parents('.jsonObjectWrap').find('.titleSty');
        var findTitleDom = _.find(oneGroupJsonTitleDoms, function (_item) { return $(_item).html() == itemName });
        if (findTitleDom) {
            needFocusItemID = $(findTitleDom).parent().find('.jsonObject').attr('id').substr(9);
        }
    } else {
        var curItemIndex = $('.clickSelected').parents('li').index();
        if (curItemIndex > -1) {
            var nextItemIndex = curItemIndex + 1;
            var nextItemDom = $('.clickSelected').parents('.jsonObjectWrap').find('.jsonObject:eq(' + nextItemIndex + ')');
            if (nextItemDom.length > 0) {
                needFocusItemID = nextItemDom.attr('id').substr(9);
            }
        }
    }
    if (needFocusItemID && Common.IsNotEmptyGuid(needFocusItemID)) {
        var needFocusItemCustomInputValueID = 'customInputValue' + needFocusItemID;
        var needFocusItemCustomTextareaValueID = needFocusItemCustomInputValueID + '_customText';
        var needFocusItemInputID = ($('#' + needFocusItemCustomTextareaValueID).length > 0) ? needFocusItemCustomTextareaValueID : needFocusItemCustomInputValueID;
        var curJsonItemID = $('.clickSelected').parents('.jsonObject').attr('id');
        var curCustomInputValueID = 'customInputValue' + curJsonItemID.substr(9);
        var isHasSinglePopup = $('#' + curCustomInputValueID + '_iScrollWrapper').length > 0;
        var isHasMultiPopup = $('#MultiSelect_Popup').length > 0;
        var isDateTime = $('#' + curCustomInputValueID + '_Parent').find('.idong-icon.icon-calendar-idong').length > 0 || $('#' + curCustomInputValueID + '_Parent').find('.idong-icon.icon-time-idong').length > 0
        var isSwitch = $('#' + curJsonItemID).find('.mui-switch.customType_switch').length > 0;
        var isTree = $('.clickSelected').attr('id').indexOf('_treeSelect') > -1;
        if (isHasSinglePopup || isHasMultiPopup || isDateTime || isSwitch || isTree) {
            setTimeout(function () {
                $('.clickSelected').removeClass('clickSelected');
                $('#' + needFocusItemCustomInputValueID).addClass('clickSelected');
                $('#' + needFocusItemInputID).focus();
            }, 500);
        } else {
            $('.clickSelected').removeClass('clickSelected');
            $('#' + needFocusItemCustomInputValueID).addClass('clickSelected');
            $('#' + needFocusItemInputID).focus();
        }
    }
}
```

### 根据作业关联资产下的子资产自动新建作业规范引用

#### 需求描述

找到作业的关联资产下的所有子资产，根据子资产的资产类别以及数量创建对应数量和关联资产类别的作业规范引用，并自动配置上资产。

#### 脚本代码

* 适用于作业项逻辑中的执行脚本

```
var context = ScriptEngine.Context;
var curTask = context.GetTaskByID(contextID);
var curTaskGroup = context.GetCurTaskGroup();
var createTaskHelper = new CreateTaskHelper();
var parentAssetID = @MyTask.Asset;

// 函数 - 获取直接儿子的资产，同时带上资产类别的名称（请勿修改）
var getAssetChildren = function(_parentAssetID,_callback){
 var daAccess = new DAAccess();  var daAccess = new DAAccess();
    var daAsset = daAccess.GetDA(SyncEntity.Asset);
    daAsset.GetChildren(_parentAssetID,function(_isSuccess, _assets){
     if(_assets && _assets.length>0){
      // 获取资产类别
      var assetTypeIDs = [];
      _.each(_assets,function(_asset){
       if(Common.IsNotEmptyGuid(_asset.AssetsTypeID)){
        assetTypeIDs.push(_asset.AssetsTypeID);
    }    
      });
      if(assetTypeIDs.length>0){
    var daAssetType = daAccess.GetDA(SyncEntity.AssetType);
    daAssetType.GetAllByIDs(assetTypeIDs,function(_isSuccess, _assetTypes){
     if(_assetTypes && _assetTypes.length>0){
      var dic = {};
      _.each(_assetTypes,function(_assetType){dic[_assetType.ID] = _assetType.Name;});
      _.each(_assets,function(_asset){
       if(dic[_asset.AssetsTypeID])
        _asset.AssetsTypeName = dic[_asset.AssetsTypeID];
      });
      _callback(_assets);
     }
     else{
      _callback(_assets);
     }
    });
      }
      else{
       _callback(_assets);
      }      
     }
     else{
      _callback(_assets);
     }
    });
};


// 函数 - 根据作业规范名创建作业（请勿修改）
var createTaskFunc = function(_positionTask, _assetID, _taskstandardName, _taskName, _callback) {
    var daAccess = new DAAccess();
    var daTaskStandard = daAccess.GetDA(SyncEntity.TaskStandard);
    daTaskStandard.GetByName(_taskstandardName, function(_isSuccess, _taskstandard) {
        if (_isSuccess && _taskstandard) {
            var sameLevelTasks = context.GetChildTasks(_positionTask.ParentTaskID);
            var mapAssets = [{
      'AssetID': _assetID ,
      'TaskStandardID': _taskstandard.TemplateID
     }];
            createTaskHelper.CreateTaskByTaskStandard(_taskstandard.ID, sameLevelTasks, _positionTask, 'after', _taskName, '', curTaskGroup.ID, '', mapAssets, true,
                function(_isSuccess, _errorMsg, _topTask, _tasks, _needSaveTasks) {
                    if (_isSuccess) {
                        if (_tasks) {
                            context.AddTasks(_tasks);
                        }
                        _callback(true, '', _topTask, _tasks);
                    } else {
                        _callback(false, _errorMsg);
                    }
                }, false);
        } else {
            _callback(false, '作业规范“' + _taskstandardName + '”不存在');
        }
    });
};


// 函数 - 创建多个作业（请勿修改）
var errorMsgs = [];
var positionTask = context.GetParentTask(curTask);
var createTasksFunc = function(_createInfos, _callback) {

    var createOne = function(_index) {
        if (_createInfos && _index >= _createInfos.length) {
            _callback(errorMsgs);
            return;
        }

        createTaskFunc(positionTask, _createInfos[_index].AssetID, _createInfos[_index].TaskstandardName, _createInfos[_index].TaskName, function(_isSuccess, _errorMsg, _topTask, _tasks) {
            if (_isSuccess) {
             positionTask = _topTask;
            } else {                
                errorMsgs.push(_errorMsg);
            }
            createOne(_index + 1);
        });
    };

    createOne(0);
};

// 函数 - 得到要创建的信息对象
var getCreateInfos = function(_parentAssetID, _callback){ 
 getAssetChildren(_parentAssetID,function(_assets){
  var createInfos = [];  
  if(_assets && _assets.length>0){
   _.each(_assets,function(_asset){
    // 有对应的资产类别才创建
    if(_asset && _asset.AssetsTypeName){
     var item = {
      'AssetID': _asset.ID, 
      'TaskstandardName': _asset.AssetsTypeName + '模块检查',   //根据资产类别确定作业规范名，请按实际情况调整
      'TaskName': _asset.Name + '模块检查' //作业名是资产名+模块检查，请按实际情况调整
     }
     createInfos.push(item);
    }
   });   
  }
  _callback(createInfos);
 });
}


// 启动运行（调用接口函数，请勿修改）
var resultName = ScriptEngine.GetResultName();
getCreateInfos(parentAssetID, function(_createInfos){
 if(_createInfos && _createInfos.length>0){
  createTasksFunc(_createInfos, function(_errorMsgs) {
      if (_errorMsgs.length == _createInfos.length) {
          alert('全部创建失败，错误信息为：\r\n' + _errorMsgs.join('\r\n'));
      } else if (_errorMsgs.length > 0) {
          alert('部分创建失败，错误信息为：\r\n' + _errorMsgs.join('\r\n'));
      }
      ScriptEngine[resultName] = true;
  });
 }
 else{
  ScriptEngine[resultName] = true;
 }
});
return { 'ResultName': resultName };

```

### 得到当前登录用户待执行和执行中作业组名称，返回可选项列表

#### 需求描述

将当前登录用户同步后存在于待执行和执行中作业组名称形成一个可选项列表

#### 脚本代码

* 适用于作业项的可选项脚本

```js
var resultName = ScriptEngine.GetResultName(); 
var curUser = GlobalInfo.GetLoginUser();
var roleIDs = [];
if (curUser.AllUserRoleGroups) {
    _.each(curUser.AllUserRoleGroups, function (_role) {
        roleIDs.push(_role.ID);
    });
}
if (roleIDs.length > 0) {
    var da = new DAAccess();
    var daRoleTG = da.GetDA(SyncEntity.RoleTG);
    daRoleTG.GetSequenceIDbyRoles(roleIDs, function (_isSuccess, _seqRoleIDs) {
        if (_isSuccess) {
            // 获取所有作业组（创建和执行）
            var daTaskGroup = da.GetDA(SyncEntity.TaskGroup);
            daTaskGroup.GetByUserGroupID(roleIDs, function (_isSuccess, _taskGroups) {
                var totalTaskGroups = null;
                if (_isSuccess && _taskGroups) {
                    totalTaskGroups = _taskGroups;
                    totalTaskGroups = _.sortBy(totalTaskGroups, function (_taskGroup) {
                        if (_taskGroup.CreateFlag == CreateFlag.ManualOnMW)
                            return _taskGroup.CreatedOn;
                        else
                            return _taskGroup.PlanStartTime
                    });
                    // 筛选待执行执行中的作业组
                    var curServiceProject = curUser.serviceProject;
                    var selectSPID = (curServiceProject ? curServiceProject.ID : Common.GuidEmpty);
                    if (totalTaskGroups && totalTaskGroups.length > 0) {
                        var toExecuteTaskGroups = [];
                        for (var i = 0; i < totalTaskGroups.length; i++) {
                            if (totalTaskGroups[i].RelatedSequenceList && totalTaskGroups[i].RelatedSequenceList.length > 0 && (!Common.IsNotEmptyGuid(selectSPID) || Common.IsEqualGuid(selectSPID, totalTaskGroups[i].ServiceProjectID))) {
                                for (var j in totalTaskGroups[i].RelatedSequenceList) {
                                    if (totalTaskGroups[i].RelatedSequenceList[j].SequenceStatus == JobStatus.Unknown)
                                        totalTaskGroups[i].RelatedSequenceList[j].SequenceStatus = JobStatus.New;
                                    if (totalTaskGroups[i].RelatedSequenceList[j].SequenceStatus == JobStatus.New || totalTaskGroups[i].RelatedSequenceList[j].SequenceStatus == JobStatus.Running) {
                                        var name = totalTaskGroups[i].Name;
                                        if (_seqRoleIDs && _seqRoleIDs.length > 0) {
                                            var seqRoleID = _.find(_seqRoleIDs, function (_item) {
                                                return Common.IsEqualGuid(_item.SequenceID, totalTaskGroups[i].RelatedSequenceList[j].SequenceID);
                                            });
                                            if (seqRoleID) {
                                                if (totalTaskGroups[i].IsEnableCollaboration)
                                                    name += '（' + totalTaskGroups[i].RelatedSequenceList[j].ActivityEntityName + '）';
                                            }
                                        }
                                        toExecuteTaskGroups.push({
                                            ID: totalTaskGroups[i]['ID'],
                                            Name: name
                                        })
                                    }
                                }
                            }
                        }
                        ScriptEngine[resultName] = toExecuteTaskGroups;
                    } else {
                        ScriptEngine[resultName] = [];
                    }
                } else {
                    ScriptEngine[resultName] = [];
                }
            });
        } else {
            ScriptEngine[resultName] = [];
        }
    });
} else {
    ScriptEngine[resultName] = [];
}
return {'ResultName':resultName};
```

### 获取某一资产的资质有效日期，赋值为默认值；更新资质有效日期，同时更新资质的最后更新日期

#### 需求描述

获取某一资产的资质有效日期，赋值为默认值；更新资质有效日期，同时更新资质的最后更新日期

#### 脚本代码

* 适用于作业项的默认值表达式

```js
// 获取某一资产的资质有效日期，赋值为默认值
var resultName = ScriptEngine.GetResultName();
var assetID = @MyTask.Asset ; // 资产ID
var qualificationNo = '002'  // 一个资产如果有多个资质的话，获取指定资质号的资质有效日期，没有多个则为''
if (assetID && Common.IsNotEmptyGuid(assetID)) {
    // 获取资产名称
    ScriptEngine.GetAjaxToApiServer('Asset', 'GetByID', 'id=' + assetID, '', 'get', function (_result) {
        var assetName = _result.Name;
        var condition = {
            'ColumnName': '',
            'Sign': '7',
            'SubqueryList': [{
                'ColumnName': 'ObjectType',
                'Sign': '1',
                'Value': 'assets'
            }, {
                'ColumnName': 'QualificationObject',
                'Sign': '1',
                'Value': assetName
            }]
        }
        // 获取对象资质的有效日期
        ScriptEngine.GetAjaxToApiServer('ObjectQualification', 'GetByCondition', '', JSON.stringify(condition), 'post', function (__result) {
            console.log(__result)
            if (__result && __result.length > 0) {
                // 有指定资质号，获取指定资质号的资质的有效日期
                if (qualificationNo) {
                    var find = _.find(__result, function (_item) { return _item.Qualification.No == qualificationNo });
                    if (find) {
                        ScriptEngine[resultName] = find.ValidDate;
                    } else {
                        ScriptEngine[resultName] = '';
                    }
                } else {
                    ScriptEngine[resultName] = __result[0].ValidDate;
                }
            } else {
                ScriptEngine[resultName] = '';
            }
        })
    });
} else {
    ScriptEngine[resultName] = '';
}

return { 'ResultName': resultName };
```

* 适用于作业项逻辑中的脚本条件

```js
var assetID = @MyTask.Asset ;
var validDate = Common.FormatDateTimeByFormat('yyyy-MM-dd', @Me.Value ); //当前作业项的值作为资质的有效日期
var qualificationNo = ''  // 一个资产如果有多个资质的话，获取指定资质号的资质有效日期
if (assetID && Common.IsNotEmptyGuid(assetID)) {
    // 获取资产名称
    ScriptEngine.GetAjaxToApiServer('Asset', 'GetByID', 'id=' + assetID, '', 'get', function (_result) {
        var assetName = _result.Name;
        var condition = {
            'ColumnName': '',
            'Sign': '7',
            'SubqueryList': [{
                'ColumnName': 'ObjectType',
                'Sign': '1',
                'Value': 'assets'
            }, {
                'ColumnName': 'QualificationObject',
                'Sign': '1',
                'Value': assetName
            }]
        }
        // 获取对象资质的有效日期
        ScriptEngine.GetAjaxToApiServer('ObjectQualification', 'GetByCondition', '', JSON.stringify(condition), 'post', function (__result) {
            var needModifyQualificationObj = null;
            if (__result && __result.length > 0) {
                // 有指定资质号，获取指定资质号的资质的有效日期
                if (qualificationNo) {
                    needModifyQualificationObj = _.find(__result, function (_item) { return _item.Qualification.No == qualificationNo });
                } else {
                    needModifyQualificationObj = __result[0];
                }
            }
            // 找到要修改的对象资质，修改“最后更新日期”，“资质有效日期”
            if (needModifyQualificationObj) {
                needModifyQualificationObj.LastUpdateDate = Common.FormatDateTimeByFormat('yyyy-MM-dd', new Date()); // 最后更新日期为当前日期
                needModifyQualificationObj.ValidDate = validDate;
                // 获取对象资质的有效日期
                ScriptEngine.GetAjaxToApiServer('ObjectQualification', 'Save', 'isValidate=true', JSON.stringify(needModifyQualificationObj), 'post', function (___result) {
                    if(!___result){
                        Common.ShowDebug('更新资质失败!');
                    }
                })
            }
        })
    });
}

return true; 
```

### 将指定作业项的值作为筛选值，显示数据库中指定自定义数据表中符合条件的指定列内容

#### 需求描述

* 首先有一张导入了数据库的excel表，根据[同步和使用自定义数据](/系统扩展指南/同步和使用自定义数据.md)导入

  <img alt=" " src={useBaseUrl('docimg/jiaobenxuqiu4201.png')} />

* SDC配置，筛选条件作业项提供筛选值，对应excel里的description列；故障现象作业项显示可选项列表，列表项为根据筛选值显示符合条件的type值+"其他"

  <img alt=" " src={useBaseUrl('docimg/jiaobenxuqiu4202.png')} />

* 比如此处筛选值为压力变送,调节，那么根据这个筛选出的可选项就应当为excel中18、19、20行的type值，18、19行的description中包含了压力变送+调节，而all那一行是固定存在的

  <img alt=" " src={useBaseUrl('docimg/jiaobenxuqiu4203.png')} />

#### 脚本代码

* 适用于作业项可选项脚本

```js
var resultName = ScriptEngine.GetResultName();
var tasks = ScriptEngine.Context.curTasks; // 当前作业
var curTask = _.find(tasks,function(_item){return _item.Name == '筛选条件'}); // 指定作业项
var defaultValues = []; // 默认值
if (curTask && curTask.Tags && curTask.Tags[0] && (curTask.Tags[0]['Value'] || curTask.Tags[0]['DefaultValue'])) {
    defaultValues = (curTask.Tags[0]['Value'] || curTask.Tags[0]['DefaultValue']).split(',');
}
// 有默认值筛选默认值或所有，没有默认值筛选所有
var descriptionCondition = '';
if (defaultValues && defaultValues.length > 0) {
    _.each(defaultValues, function (_item, _index) {
        descriptionCondition += ' description like \'%' + _item + '%\''
        if (_index != defaultValues.length - 1)
            descriptionCondition += ' and';
    })
    descriptionCondition += 'or description = \'all\'';
} else {
    descriptionCondition = ' description = \'all\'';
}
var daAccess = new DAAccess();
var daExternalEntity = daAccess.GetExternalEntityDA('failuretable');
var sql = 'select ID,Type from failuretable where' + descriptionCondition;
daExternalEntity.ExecuteSQL(sql, [], function (_isSuccess, _rows) {
    var list = [];
    if (_isSuccess) {
        if (_rows && _rows.length > 0) {
            for (var i = 0; i < _rows.length; i++) {
                var row = _rows[i];
                var obj = { 'ID': row['ID'], 'Name': row['Type'] }
                list.push(obj);
            }
        }
    }
    ScriptEngine[resultName] = list;
});

return { 'ResultName': resultName };
```

### 根据作业组JSON属性的值来进行入库操作，如果物料或库存不存在则自动创建

#### 需求描述

根据作业组JSON属性的值来进行入库操作，如果物料或库存不存在则自动创建

#### 脚本代码

* 适用于作业组属性更多设置中的流程后脚本

```js
// 根据作业组JSON属性的值来进行入库操作，如果物料或库存不存在则自动创建
// 作业组JSON属性的名称为：库存，且为数组，有两个属性：备件名称和数量，其中备件名称就是物料号和物料名（可自行修改）
// 存取区域固定为一个，名称为：固定存取区域（可自行修改）

var taskGroupID = curTaskGroup.ID;
var operator = '';

// 获取库存操作数据
var getJsonArray = function (_callback) {
    var arr = [];
    var propertyName = '入库';
    var url = 'Report/GetTaskGroupPropertyByName?taskGroupID=' + taskGroupID + '&name=' + propertyName;
    var result = imClient.Get(url);
    var resultObj = JSON.parse(result);
    if (resultObj && resultObj.IsOk && resultObj.Response) {
        operator = resultObj.Response.ValueInputBy;
        arr = JSON.parse(resultObj.Response.Value);
    }
    else
        imLogWriter.WriteError('获取作业组属性 ' + propertyName + ' 失败，返回为：' + result);
    _callback(arr);
};

// 入库操作
var inInventory = function (_param) {
    var result = imClient.Post('Inventory/OperatingInventory', JSON.stringify(_param));
    var resultObj = JSON.parse(result);
    if (!resultObj || !resultObj.IsOk)
        imLogWriter.WriteError('入库操作失败，返回为：' + result);
};

getJsonArray(function (arr) {
    if (arr.length > 0) {
        var param = {
            'ToStorageBase': '中转库',
            'OperationType': 1,
            'OperationWOID': taskGroupID,
            'Operator': operator,
            'OperationItems': []
        };
        for (var i = 0; i < arr.length; i++) {
            var materialName = arr[i]['备件名称'];
            var num = parseInt(arr[i]['数量']);
            if (materialName && num > 0) {
                param.OperationItems.push({
                    'MaterielNo': materialName,
                    'Quantity': num,
                    'IsCreateMateriel': true
                });
            }
        }
        if (param.OperationItems.length > 0) {
            inInventory(param);
        }
    }
});
```

### 根据作业组JSON属性的值来进行出库操作，如果库存数量小于等于0则自动删除相关库存和物料

#### 需求描述

根据作业组JSON属性的值来进行出库操作，如果库存数量小于等于0则自动删除相关库存和物料

#### 脚本代码

* 适用于作业组属性更多设置中的流程后脚本

```js
// 根据作业组JSON属性的值来进行出库操作，如果库存数量小于等于0则自动删除相关库存和物料
// 作业组JSON属性的名称为：库存，且为数组，有两个属性：备件名称和数量，其中备件名称就是物料号和物料名（可自行修改）
// 存取区域固定为一个，名称为：固定存取区域（可自行修改）

var taskGroupID = curTaskGroup.ID;
var operator = '';

// 获取库存操作数据
var getJsonArray = function (_callback) {
    var arr = [];
    var propertyName = '出库';
    var url = 'Report/GetTaskGroupPropertyByName?taskGroupID=' + taskGroupID + '&name=' + propertyName;
    var result = imClient.Get(url);
    var resultObj = JSON.parse(result);
    if (resultObj && resultObj.IsOk && resultObj.Response) {
        operator = resultObj.Response.ValueInputBy;
        arr = JSON.parse(resultObj.Response.Value);
    }
    else
        imLogWriter.WriteError('获取作业组属性 ' + propertyName + ' 失败，返回为：' + result);
    _callback(arr);
};

// 查询库存数量小于等于0的库存
var queryZeroInventory = function (_param, _callback) {
    var list = [];
    var materielList = [];
    for (var i = 0; i < _param.OperationItems.length; i++)
        materielList.push({ 'ColumnName': 'MaterielNo', 'Sign': 1, 'Value': _param.OperationItems[i].MaterielNo });
    var condition = {
        'ColumnName': '', 'Sign': 7, 'SubqueryList': [
            { 'ColumnName': 'StorageBaseName', 'Sign': 1, 'Value': _param.FromStorageBase },
            { 'ColumnName': 'Quantity', 'Sign': 6, 'Value': '0' },
            { 'ColumnName': '', 'Sign': 8, 'SubqueryList': materielList }
        ]
    };
    var result = imClient.Post('Inventory/GetByCondition', JSON.stringify(condition));
    var resultObj = JSON.parse(result);
    if (resultObj && resultObj.IsOk && resultObj.Response)
        list = resultObj.Response;
    else
        imLogWriter.WriteError('查询库存数量小于等于0的库存操作失败，返回为：' + result);
    _callback(list);
};

// 删除库存
var deleteInventory = function (_ids, _callback) {
    var result = imClient.Post('Inventory/DeleteByIDList', JSON.stringify(_ids));
    var resultObj = JSON.parse(result);
    if (!resultObj || !resultObj.IsOk) {
        imLogWriter.WriteError('删除库存失败，返回为：' + result);
        _callback(false);
    }
    else
        _callback(true);
};

// 删除物料
var deleteMaterial = function (_ids, _callback) {
    var result = imClient.Post('Materiel/DeleteByIDList', JSON.stringify(_ids));
    var resultObj = JSON.parse(result);
    if (!resultObj || !resultObj.IsOk) {
        imLogWriter.WriteError('删除物料失败，返回为：' + result);
        _callback(false);
    }
    else
        _callback(true);
};

// 出库操作
var outInventory = function (_param) {
    var result = imClient.Post('Inventory/OperatingInventory', JSON.stringify(_param));
    var resultObj = JSON.parse(result);
    if (!resultObj || !resultObj.IsOk) {
        imLogWriter.WriteError('出库操作失败，返回为：' + result);
    }
    else {
        // 如果成功，则删除掉库存数量小于等于0的库存和物料
        queryZeroInventory(_param, function (_list) {
            if (_list && _list.length > 0) {
                var inventoryIDs = [];
                var materielIDs = [];
                for (var i = 0; i < _list.length; i++) {
                    inventoryIDs.push(_list[i].ID);
                    materielIDs.push(_list[i].MaterielID);
                }
                deleteInventory(inventoryIDs, function (_success) {
                    if (_success)
                        deleteMaterial(materielIDs, function (_success) { });
                });
            }
        });
    }
};

getJsonArray(function (arr) {
    if (arr.length > 0) {
        var param = {
            'FromStorageBase': '中转库',
            'OperationType': 3,
            'OperationWOID': taskGroupID,
            'Operator': operator,
            'OperationItems': []
        };
        for (var i = 0; i < arr.length; i++) {
            var materialName = arr[i]['备件名称'];
            var num = parseInt(arr[i]['数量']);
            if (materialName && num > 0) {
                param.OperationItems.push({
                    'MaterielNo': materialName,
                    'Quantity': num
                });
            }
        }
        if (param.OperationItems.length > 0) {
            outInventory(param);
        }
    }
});
```

## Web端脚本

### 得到资产的所有子孙，返回资产名的列表

#### 需求描述

根据指定的资产名得到其所有子孙，返回资产名的列表

#### 脚本代码

* 适用于作业组属性更多设置中的可选项脚本

```js
var resultName = ScriptEngine.GetResultName();
var assetNames = [];
ScriptEngine.GetAssets('aaaaa', true, false, function (_result) {   //'aaaaa'为资产名
    if (_result && _result.length > 0) {
        for (var i = 0; i < _result.length; i++) {
            assetNames.push({ 'ID': _result[i].ID, 'Name': _result[i].Name });
        }
    }
    ScriptEngine[resultName] = assetNames;
});

return { 'ResultName': resultName };
```

* 效果如图

<img alt=" " src={useBaseUrl('docimg/jiaoben1.png')} />

### 得到固定组织单元的直接儿子，此外加一个固定的字符串，返回列表

#### 需求描述

得到固定组织单元下所有的直接儿子，并在后面加一个固定的字符串，返回成列表

#### 脚本代码

* 适用于作业组属性更多设置中的可选项脚本

```js
var field = '*';  //固定字符串参数
var resultName = ScriptEngine.GetResultName();
var orgUnitNames = [];
var orgUnitName = '监理队';//参数 组织单元名
ScriptEngine.GetOrgUnits(orgUnitName, true, true, function (_result) {
    if (_result && _result.length > 1) {//得到结果第一个是组织单元本身，只需儿子，则从第一个元素开始
        for (var i = 1; i < _result.length; i++) {
            orgUnitNames.push({ 'ID': _result[i].ID, 'Name': _result[i].Name + field});
        }
    }
    ScriptEngine[resultName] = orgUnitNames;
});

return { 'ResultName': resultName };
```

* 效果如图

<img alt=" " src={useBaseUrl('docimg/jiaoben2.png')} />

### 组织单元属于登录人组织单元，岗位为固定名称，所有人列表

#### 需求描述

组织单元属于当前登录用户组织单元，岗位为固定名称，返回满足条件的所有人的列表

#### 脚本代码

* 适用于作业组属性更多设置中的可选项脚本

```js
var postName = '监理员';
var resultName = ScriptEngine.GetResultName();
var users = [];
ScriptEngine.GetLoginUser(function (_curLoginUser) {
    if (_curLoginUser) {
        var curUserID = _curLoginUser.UserID?_curLoginUser.UserID:_curLoginUser.ID;
        var sql = 'select id,bi_name as Name from [User] where ai_deleted=\'0\'  and id in(\
                    select userid from userrolegroup where orgunitID in(\
                        SELECT DISTINCT ID FROM H_OrgUnitRelation WHERE ParentID in(select orgunitid from userrolegroup where userid=\'' + curUserID + '\')\
                    or orgunitid IN(select orgunitid from userrolegroup where userid=\''+ curUserID + '\'))\
                    and roleid in(select id from role where bi_name=\'' + postName + '\' and ai_deleted=\'0\')) order by bi_name';    
        ScriptEngine.GetAjaxToApiServer('Sql', 'GetDataSetBySQL', 'sql=' + sql, null, 'POST', function (_result) {
        if (_result && _result.Rows && _result.Rows.length > 0) {
                for (var i = 0; i < _result.Rows.length; i++) {
                    users.push({ ID: _result.Rows[i].Cells[0], Name: _result.Rows[i].Cells[1] });
                }
                ScriptEngine[resultName] = users;

            } else {
                ScriptEngine[resultName] = users;
            }
        });

    } else {
        ScriptEngine[resultName] = users;
    }
});
return { 'ResultName': resultName };
```

* 效果如图

<img alt=" " src={useBaseUrl('docimg/jiaoben3.png')} />

### 组织单元属于作业组组织单元，岗位为固定名称， 所有人列表

#### 需求描述

组织单元属于作业组的组织单元，岗位为固定名称，返回满足条件的所有人的列表

#### 脚本代码

* 适用于作业组属性更多设置中的可选项脚本（计划和创建活动不适用）

```js
var postName = '监理员';
var taskGroupProperyName = '库存'; // 后续代码会根据这个属性获取当前作业组
var users = [];
var taskgroupProperty = ScriptEngine.Context.GetTaskGroupProperty(taskGroupProperyName);
if (taskgroupProperty) {
    var resultName = ScriptEngine.GetResultName();
    var sql = 'select DISTINCT id,bi_name as Name from [User] where ai_deleted=\'0\' \
    and id in(\
        select userid from userrolegroup where orgunitID in(\
            SELECT DISTINCT ID FROM H_OrgUnitRelation WHERE ParentID in(select OrgUnitID from taskGroupEntity where id IN(select TaskGroupID from TaskGroupProperty where ID=\''+ taskgroupProperty.ID + '\'))\
        ) or orgunitid IN(select OrgUnitID from taskGroupEntity where id IN(select TaskGroupID from TaskGroupProperty where ID=\''+ taskgroupProperty.ID + '\')) \
        and roleid in(select id from role where bi_name=\''+ postName + '\' and ai_deleted=\'0\')\
    ) order by bi_name';
    ScriptEngine.GetAjaxToApiServer('Sql', 'GetDataSetBySQL', 'sql=' + sql, null, 'POST', function (_result) {
        if (_result && _result.Rows && _result.Rows.length > 0) {
            for (var i = 0; i < _result.Rows.length; i++) {
                users.push({ ID: _result.Rows[i].Cells[0], Name: _result.Rows[i].Cells[1] });
            }
            ScriptEngine[resultName] = users;

        } else {
            ScriptEngine[resultName] = users;
        }
    });
    return { 'ResultName': resultName };
} else {
    console.error('属性不存在：' + taskGroupProperyName);
    return users;
}
```

* 效果如图

<img alt=" " src={useBaseUrl('docimg/jiaoben4.png')} />

### 根据名称找到对应资产，将此资产的某一属性更新到另一作业组属性里

#### 需求描述

根据名称找到对应资产，资产名唯一，将此资产的某一属性的值更新到另一作业组属性里

#### 脚本代码

* 适用于作业组属性更多设置中的修改值事件后脚本

```js
var assetName = '阀门11';
var assetPropertyName = '状态字符串';
var taskGroupPropertyName = '阀门11的状态字符串';
var urlParameters = 'parentID=invalid&name=' + assetName;
ScriptEngine.GetAjaxToApiServer('Asset','GetByName',urlParameters,null,'get',function(_result){
 var asset = _result;
 if(asset){
  urlParameters = 'assetID='+asset.ID+'&propertyName=' + assetPropertyName;
  ScriptEngine.GetAjaxToApiServer('Asset','GetAssetProperty',urlParameters,null,'get',function(_result){
   var assetProperty = _result;
   if(assetProperty){
    ScriptEngine.Context.SetTaskGroupPropertyValue(taskGroupPropertyName,assetProperty.CurrentValue);   
   }
   else{
    console.error('资产属性不存在：' + assetName +'.' + assetPropertyName);
   }
  });
 }else{
  console.error('资产不存在:' + assetName);
 }
});
return true;
```

* 效果如图

<img alt=" " src={useBaseUrl('docimg/jiaoben5.png')} />

### 根据人员名称查找人员某一属性（更多属性）更新到另一个作业组属性

#### 需求描述

根据人员的名称查找该人员更多属性中的某一属性，将此属性值更新到另一作业组属性里

#### 脚本代码

* 适用于作业组属性更多设置中的修改值事件后脚本

```js
var userName = 'a11甲班监理员';
var userPropertyName = '资质';
var taskGroupPropertyName = '人员属性的值';
var urlParameters = 'parentID=invalid&name=' + userName;
ScriptEngine.GetAjaxToApiServer('UserConfig','GetByName',urlParameters,null,'get',function(_result){
 var user = _result; 
 if(user){
  var customProperties = user.CustomProperty;
  if(customProperties){
   customProperties = JSON.parse(customProperties);
   var property = _.find(customProperties,function(_item){return _item.Name==userPropertyName;});
   if(property){
    ScriptEngine.Context.SetTaskGroupPropertyValue(taskGroupPropertyName,property.Value);
   }
   else{
    console.error('人员扩展属性不存在:' + userName + '.' + userPropertyName);
   }
  }
  else{
   console.error('人员没有扩展属性:' + userName);
  }
 }else{
  console.error('人员不存在:' + userName);
 }
});
return true;
```

* 效果如图

<img alt=" " src={useBaseUrl('docimg/jiaoben6.png')} />

### 按照列表名得到列表项

#### 需求描述

按照列表的名称，得到该列表的项

#### 脚本代码

* 适用于作业组属性更多设置中的可选项脚本

```js
var resultName = ScriptEngine.GetResultName();
var responseItems = [];
var responseName = '地区';//参数 自定义列表名
console.log(responseName);
var urlParameters = 'parentID=&name=' + responseName;
ScriptEngine.GetAjaxToApiServer('UserDefinedList','GetByName',urlParameters,null,'get',function(_result){    
 if(_result){
  urlParameters = 'parentID=' + _result.ID;
  ScriptEngine.GetAjaxToApiServer('UserDefinedList','GetChild',urlParameters,null,'get',function(_result){    
   if(_result){
    ScriptEngine[resultName]=_result;
   }
   else{
    console.error('没有找到“'+responseName+'”的列表项');
    ScriptEngine[resultName]=[];
   }
  });  
 }
 else{
  console.error('没有找到“'+responseName+'”的列表类型');
  ScriptEngine[resultName]=[];
 }
});
return { 'ResultName':resultName};
```

* 效果如图

<img alt=" " src={useBaseUrl('docimg/jiaoben7.png')} />

### 按照id得到列表项的名称

#### 需求描述

按照列表项的id得到列表项的名称

#### 脚本代码

* 适用于作业组属性更多设置中的可选项脚本

```js
var resultName = ScriptEngine.GetResultName();
var responseItemID = '698DB607-ED42-4FC1-978A-144D410FC46C';
var list = [];
ScriptEngine.GetAjaxToApiServer('UserDefinedList','GetByID','id='+responseItemID, '','get',function(_result){
 if(_result){
  list.push({ 'ID': _result.ID, 'Name': _result.Name });
 }
 ScriptEngine[resultName] = list;
});

return { 'ResultName':resultName};
```

* 效果如图

<img alt=" " src={useBaseUrl('docimg/jiaoben8.png')} />

### 退料明细 - 实际退料 = 退料差额

#### 需求描述

退料明细 - 实际退料 = 退料差额，都为json格式的库存操作属性，以退料明细为准，相同物料的数量相减，有则减去实际退料，结果自动更新至退料差额，退料差额初始值为空

#### 脚本代码

* 适用于作业组属性更多设置中的修改值事件后脚本

```js
var materialReturn = ScriptEngine.Context.GetTaskGroupPropertyValue('退料明细');
var realReturn = ScriptEngine.Context.GetTaskGroupPropertyValue('实际退料');
if (materialReturn) {
    var materialReturnObj = JSON.parse(materialReturn);
    if(realReturn){
     var realReturnObj = JSON.parse(realReturn);
     if (materialReturnObj && materialReturnObj['操作项'] && realReturnObj && realReturnObj['操作项']) {
         var materialReturnOperationItemList = materialReturnObj['操作项'];
         var realReturnOperationItemList = realReturnObj['操作项'];
         if (materialReturnOperationItemList && materialReturnOperationItemList.length > 0 && realReturnOperationItemList && realReturnOperationItemList.length > 0) {
             for (var i = 0; i < materialReturnOperationItemList.length; i++) {
                 var materielName = materialReturnOperationItemList[i]['物料'];
                 if (materielName) {
                  var find = _.find(realReturnOperationItemList,function(_item){return _item['物料'] == materielName;});
                  if(find && find['数量']){
                   materialReturnOperationItemList[i]['数量'] = parseFloat(materialReturnOperationItemList[i]['数量']) - parseFloat(find['数量']) + '';
                  }
                 }
             }
             
         }
     }
    }
    var modifyValue = JSON.stringify(materialReturnObj);
    ScriptEngine.Context.SetTaskGroupPropertyValue('退料差额', modifyValue);
}
return true;
```

* 效果如图

<img alt=" " src={useBaseUrl('docimg/jiaoben9.png')} />

### 作业组属性为json，操作项下有标准价格并且大于200时，更新另一个作业组属性为'是'

#### 需求描述

当前作业组属性为json，其中操作项下有标准价格，当标准价格大于200时，更新另一个作业组属性为列表项的'是'

#### 脚本代码

* 适用于作业组属性更多设置中的修改值事件后脚本

```js
var curTaskGroupPropertyName = '库存';
var modifyTaskGroupPropertyName = '是否列表';
var property = ScriptEngine.Context.GetTaskGroupProperty(curTaskGroupPropertyName);
if(property){
 if(property.Value){
  var obj = JSON.parse(property.Value);
  if(obj && obj['操作项'] && obj['操作项'].length>0){
   var find = _.find(obj['操作项'],function(_item){ return _item['标准价格'] && parseFloat(_item['标准价格'])> 200 });
   if(find){
    var urlParameters = 'parentID=invalid&name=是';
    // 获取名字为“是”的列表项（注意：列表项名字为“是”的不能有多个，否则有可能来自于不同的列表）
    ScriptEngine.GetAjaxToApiServer('UserDefinedList','GetByName',urlParameters,null,'get',function(_result){    
     if(_result){
      ScriptEngine.Context.SetTaskGroupPropertyValue(modifyTaskGroupPropertyName,_result.ID);
     }
     else{
      console.error('没有找到“是”的列表项');
     }
    });   
   }
  }
 }
 else{
  console.error('作业组属性值为空：' + curTaskGroupPropertyName)
 }
}
else{
 console.error('作业组属性不存在：' + curTaskGroupPropertyName);
}
return true;
```

* 效果如图

<img alt=" " src={useBaseUrl('docimg/jiaoben10.png')} />

### 筛选出组织单元属于a，岗位维修+ 组织单元属于b，岗位为班长的人的集合

#### 需求描述

筛选出组织单元属于a，岗位维修+ 组织单元属于b，岗位为班长的人的集合(此条件可以是一个或多个，组合是固定的)，角色能满足其中一项的用户，都返回为列表显示出来

#### 脚本代码

* 适用于作业组属性更多设置中的可选项脚本

```js
var resultName = ScriptEngine.GetResultName();
var orgUnitNames = ['201车间', '202车间']; //组织单元名
var postIDs = ['48f637c4-c4d2-422a-ae51-16364ab8838b', '65eb1faa-b1ae-4e63-8636-0b92eb35051b'];  //班长、技师
var users = [];
if (orgUnitNames && orgUnitNames.length > 0 && postIDs && postIDs.length > 0 && orgUnitNames.length == postIDs.length) {
    var sql = 'select distinct [User].ID, [User].BI_Name UserName  from UserRoleGroup left join[User] on UserRoleGroup.UserID = [User].ID and[User].AI_Deleted = \'0\'\ left join OrgUnit ChildOrgUnit on ChildOrgUnit.ID = UserRoleGroup.OrgUnitID and ChildOrgUnit.AI_Deleted = \'0\'\ left join H_OrgUnitRelation on H_OrgUnitRelation.ID = UserRoleGroup.OrgUnitID left join OrgUnit ParentOrgUnit on ParentOrgUnit.ID = H_OrgUnitRelation.ParentID and ParentOrgUnit.AI_Deleted = \'0\' where ';
    for (var i = 0; i < orgUnitNames.length; i++) {
        sql += '((ParentOrgUnit.BI_Name=\'' + orgUnitNames[i] + '\' or  ChildOrgUnit.BI_Name=\'' + orgUnitNames[i] + '\') and UserRoleGroup.RoleID =\''  + postIDs[i] + '\')';
        if (i != orgUnitNames.length - 1) {
            sql += ' or ';
        }
    }
    ScriptEngine.GetAjaxToApiServer('Sql', 'GetDataSetBySQL', 'sql=' + sql, null, 'POST', function (_result) {
        if (_result && _result.Rows && _result.Rows.length > 0) {
            for (var i = 0; i < _result.Rows.length; i++) {
                users.push({ ID: _result.Rows[i].Cells[0], Name: _result.Rows[i].Cells[1] });
            }
            ScriptEngine[resultName] = users;
        } else {
            ScriptEngine[resultName] = users;
        }
    });
} else {
    ScriptEngine[resultName] = users;
}
return { 'ResultName': resultName };
```

* 效果如图

  <img alt=" " src={useBaseUrl('docimg/jiaoben11.png')} />

### EOC选择属于某组织单元和某岗位的人，显示是否在岗（不在岗最后排列），显示在手工单数（顺序排列）

#### 需求描述

EOC修改作业组属性时，可选择属于某组织单元和某岗位的人，同时将所有符合条件的人是否在岗（不在岗最后排列），在手工单数（顺序排列）显示出来

#### 脚本代码

* 适用于作业组属性更多设置中的可选项脚本

```

var list = [];  //定义数组列表
var orgUnitID = 'e31c2b8d-13c5-479a-9b88-48c35f7b2f96';  //定义组织单元  
var postID = 'ce59a28d-f441-4953-9491-62ed2d576ee6'; //定义岗位
var resultName = ScriptEngine.GetResultName();
ScriptEngine.GetAjaxToApiServer('UserConfig', 'GetByOrgUnitID', 'orgUnitID=' + orgUnitID + '&withRoles=' + true, '', 'GET', function (_usersBelongOrgUnit) {    //调得到所有用户接口
  console.log(_usersBelongOrgUnit); //打印出来
  list.push({ ID: 'title', Name: '姓名', '在手工单数': '在手工单数', '在岗': '是否在岗' });  //数组标题
  ScriptEngine.GetAjaxToApiServer('UserConfig', 'GetByPostID', 'postID=' + postID, '', 'GET', function (_usersBelongPost) {    //调得到所有用户接口
    console.log(_usersBelongPost); //打印出来
    var userList = [];
    if (_usersBelongPost && _usersBelongPost.length > 0 && _usersBelongOrgUnit && _usersBelongOrgUnit.length > 0) {
      //从所有用户角色里筛选出组织单元和岗位符合的用户
      var users = _.filter(_usersBelongOrgUnit, function (_user) {
        return _.find(_usersBelongPost, function (__user) { return __user.ID == _user.ID });
      })
      if (users && users.length > 0) {
        _.each(users, function (_user) {
          userList.push({ ID: _user.ID, Name: _user.Name })
        })
      }
    }
    var sql = 'select SeqUser.UserID,COUNT(*) as Count FROM SeqUser LEFT JOIN TaskGroupSequence ON TaskGroupSequence.ID = SeqUser.SeqID LEFT JOIN ActivityEntity ON ActivityEntity.ID = TaskGroupSequence.ActivityEntityID where  (ActivityState =1 or ActivityState =2)  and ActivityEntity.ActivityID = \'94070C66-DAFC-4DEA-821E-586DDC7F4072\' and TaskGroupSequence.TaskGroupEntityID in(select ID from TaskGroupEntity where IsExtracted=\'0\') group by SeqUser.UserID'

    ScriptEngine.GetAjaxToApiServer('Sql', 'GetDataSetBySQL', 'sql=' + sql, '', 'get', function (_result) {
      console.log(_result);
      var toExecuteUserAndCount = [];
      if (_result && _result.Rows && _result.Rows.length > 0) {
        toExecuteUserAndCount = _result.Rows;
      }
      _.each(userList,function(_user){
        var find = _.find(toExecuteUserAndCount,function(_item){return _item['Cells'] && _item['Cells'][0] == _user['ID']});
        _user['在手工单数'] = find?find['Cells'][1]:0;
      })
      userList = _.sortBy(userList, '在手工单数');
      ScriptEngine.GetAjaxToApiServer('Scheduling', 'GetScheduleUserByCondition', '', '', 'POST', function (_result) {    //调得到所有用户接口
        console.log(_result); //打印出来
        _.each(userList, function (_item) {
          var isRight = _.find(_result, function (__item) {
            var endTs = new Date(__item.EndTime).getTime();
            var startTs = new Date(__item.StartTime).getTime();
            var ts = new Date().getTime()
            return (__item.UserID == _item.ID && ts >= startTs && ts <= endTs)
          })
          _item['在岗'] = isRight ? '是' : '否';
          _item['Color'] = isRight ? 'black' : '#ccc';
          console.log(isRight);
        })
        userList = _.sortBy(userList, '在岗').reverse();
        list = list.concat(userList);
        ScriptEngine[resultName] = list;

      });
    })
  })
});
return { 'ResultName': resultName };

```

* 效果如图

  <img alt=" " src={useBaseUrl('docimg/jiaoben12.png')} />

### EOC作业组属性中选择某组织单元后，自动将属于组织单元的用户填入另一个作业组属性

#### 需求描述

EOC修改作业组属性时，选择了组织单元的值之后，自动获取属于该组织单元的用户，将结果赋值到另一个作业组属性中

#### 脚本代码

* 适用于作业组属性更多设置中的可选项脚本及修改值后事件脚本

```

可选项脚本中，用于获取组织单元列表

var field = '';  //固定字符串参数
var resultName = ScriptEngine.GetResultName();
var orgUnitNames = [];
var orgUnitName = '某电厂';//参数 父级组织单元名
ScriptEngine.GetOrgUnits(orgUnitName, true, false, function (_result) {
    if (_result && _result.length > 1) {
        for (var i = 1; i < _result.length; i++) {
            orgUnitNames.push({ 'ID': _result[i].ID, 'Name': _result[i].Name + field});
        }
    }
    ScriptEngine[resultName] = orgUnitNames;
});

return { 'ResultName': resultName };

```

```
修改值后事件脚本中，用于选择组织单元后获取用户及赋值

var value = ScriptEngine.Context.GetTaskGroupPropertyValue('检修班组'); //作业组属性名
ScriptEngine.GetOrgUnits('', true, false,function(_result){
 var find = _.find(_result,function(_item){return _item['Name'] == value});
    var userNameList = [];
    if (find) {
        SysCommon.AjaxToApiServer('UserConfig', 'GetByOrgUnitID', 'orgUnitID=' + find.ID + '&withRoles=' + false, '', 'get', function (__isOk, __msg, __result) {
            if (__isOk && __result) {
                if (__isOk && __result && __result.length > 0) {
                    _.each(__result, function (_user) {
                        userNameList.push(_user.Name);
                    })
                }
            }
            ScriptEngine.Context.SetTaskGroupPropertyValue('班组成员', userNameList.join(','));  // 自动赋值的作业组属性名
        })
    }else{
        ScriptEngine.Context.SetTaskGroupPropertyValue('班组成员', userNameList.join(','));
    }
})
return true;

```

* 效果如图

  <img alt=" " src={useBaseUrl('docimg/jiaoben13.png')} />

### 数据类型为json字符串的作业组属性修改后，自动将值填入另一个Json字符串作业组属性中

#### 需求描述

作业组属性1和作业组属性2都为Json字符串，其中有相同的Json属性，当修改了作业组属性1的Json属性值后，自动将修改后的值写进作业组属性2里相同的Json属性中

#### 脚本代码

* 适用于作业组属性更多设置中的修改值后事件脚本

```
var str = ScriptEngine.Context.GetTaskGroupPropertyValue('内容');
console.log(str);
var assetNameList = [];
if (str) {
  ScriptEngine.GetAjaxToApiServer('UserDefinedList', 'GetUserDefinedListTree', '', null, 'GET', function (_response) {
    var type = _.find(_response,function(_item){return _item['Name'] == '类别'});
    var action = _.find(_response,function(_item){return _item['Name'] == '动作'});
    var newValueList = [];
    var valueList = JSON.parse(str);
    _.each(valueList, function (_item) {
      var assetName = _item['对象'];
      if (assetName.indexOf('.') > -1) {
        var index = assetName.lastIndexOf('.');
        if (index > -1) {
          assetName = assetName.substr(index + 1);
        }
      }
      assetNameList.push(assetName);
      var curType = _item['类别'];
      var curAction = _item['动作'];
      if(type && type['ChildList']){
        var find = _.find(type['ChildList'],function(__item){return __item['ID'] == curType});
        if(find){
          curType = find['Name'];
        }
      }
      if(action && action['ChildList']){
        var find = _.find(action['ChildList'],function(__item){return __item['ID'] == curAction});
        if(find){
          curAction = find['Name'];
        }
      }
      newValueList.push({'类别':curType,'动作':curAction,'对象':_item['对象']})
    })
    // console.log(newValueList);
    ScriptEngine.GetAjaxToApiServer('Asset', 'GetAssets', '', null, 'GET', function (_result) {
      var assetTypeIDList = [];
      _.each(assetNameList, function (_assetName) {
        var find = _.find(_result, function (_asset) { return _asset['Name'] == _assetName });
        if (find && find['RelatedAssetType'] && find['RelatedAssetType']['ID'] && SysCommon.IsNotEmptyGuid(find['RelatedAssetType']['ID'])) {
          assetTypeIDList.push(find['RelatedAssetType']['ID']);
        } else {
          assetTypeIDList.push(SysCommon.GuidEmpty);
        }
      })
     

        // ScriptEngine.Context.SetTaskGroupPropertyValue('操作内容1',JSON.stringify(valueList));
        var taskGroupProperty = ScriptEngine.Context.GetTaskGroupProperty('操作内容');
        if (taskGroupProperty) {
          $('.JsonData', $('#' + taskGroupProperty.ObjID)).attr('dataString', JSON.stringify(newValueList));
          window.ShowJsonTableView($('#' + taskGroupProperty.ObjID).find('.JsonData'), JSON.stringify(newValueList));
        }
      
    });
  })
}

return true;

```

* 效果如图

  <img alt=" " src={useBaseUrl('docimg/jiaoben14.png')} />

### 数据类型为可输入列表作业组属性编辑时选择输入后，自动将输入的内容作为列表项新建到列表中

#### 需求描述

当数据类型为可输入列表时，因为列表项中没有想要的选项而选择了输入，如果输入内容是原列表项中没有的，则将输入的内容新建到列表项中，下次操作时自动成为列表选择项之一

#### 脚本代码

* 适用于作业组属性更多设置中的修改值后事件脚本

```
var value = ScriptEngine.Context.GetTaskGroupPropertyValue('动作'); //作业组属性名
if (value && !SysCommon.IsNotEmptyGuid(value)) {
    var parentID = '9eccc102-2cee-42fe-92f6-ce34dd874215' //自定义列表的ID
    var condition = { 
        Type: 7, 
        ParentID: parentID, 
        Name: value 
    }; 
    ScriptEngine.GetAjaxToApiServer('UserDefinedList', 'Create', '', JSON.stringify(condition), 'post', function (_result) { 
        console.log(_result);
    })
}
return true;

```

* 效果如图

  <img alt=" " src={useBaseUrl('docimg/jiaoben15.png')} />

### 活动结束后，将指定的作业组属性赋值到指定资产的同名属性中

#### 需求描述

流程中，在活动实例结束后，将指定的作业组属性赋值到指定资产的同名属性中

#### 脚本代码

* 适用于作业组属性更多设置中的流程后脚本

```js
// 当前作业组对象，如：获取工程ID、当前作业组ID、当前作业组名称
var projectID = curTaskGroup.ProjectID;
var taskGroupID = curTaskGroup.ID;
var taskGroupName = curTaskGroup.Name;

// 获取作业组属性函数
var getTaskGroupProperty = function (_propertyName) {
    var url = 'Report/GetTaskGroupPropertyByName?taskGroupID=' + curTaskGroup.ID + '&name=' + _propertyName;
    var result = imClient.Get(url);
    var resultObj = JSON.parse(result);
    if (resultObj) {
        if (resultObj.IsOk) {
            return resultObj.Response;
        }
        else {
            imLogWriter.WriteError('获取作业组属性“' + _propertyName + '”调用成功，但返回错误，错误信息为：' + resultObj.ErrorMsg);
        }
    }
    else {
        imLogWriter.WriteError('获取作业组属性“' + _propertyName + '”调用失败，返回为：' + result);
    }
    return null;
};

// 修改资产属性的值函数
var modifyAssetProperty = function (_assetID, _propertyName, _value) {
    var url = 'Asset/GetAssetProperty?assetID=' + _assetID + '&propertyName=' + _propertyName;
    var result = imClient.Get(url);
    var resultObj = JSON.parse(result);
    if (resultObj) {
        if (resultObj.IsOk) {
            var property = resultObj.Response;
            var url = 'Asset/UpdateAssetPropertyValue2';
            var data = { 'ID': property.ID, 'Value': _value };
            var result = imClient.Post(url, JSON.stringify(data));
            var resultObj = JSON.parse(result);
            if (resultObj) {
                if (resultObj.IsOk) {
                    return true;
                }
                else {
                    imLogWriter.WriteError('修改资产属性“' + _propertyName + '”的值调用成功，但返回错误，错误信息为：' + resultObj.ErrorMsg);
                }
            }
            else {
                imLogWriter.WriteError('修改资产属性“' + _propertyName + '”的值调用失败，返回为：' + result);
            }
        }
        else {
            imLogWriter.WriteError('获取资产属性“' + _propertyName + '”调用成功，但返回错误，错误信息为：' + resultObj.ErrorMsg);
        }
    }
    else {
        imLogWriter.WriteError('获取资产属性“' + _propertyName + '”调用失败，返回为：' + result);
    }
    return false;
};

var assetID = '781c1136-ebf6-4959-bca5-ca369b28f26d';
modifyAssetProperty(assetID, '作业组名称', taskGroupName);

var property = getTaskGroupProperty('操作开始时间');
if (property)
    modifyAssetProperty(assetID, '操作开始时间', property.Value);
    
var property = getTaskGroupProperty('操作结束时间');
if (property)
    modifyAssetProperty(assetID, '操作结束时间', property.Value);
    
var property = getTaskGroupProperty('发令人');
if (property)
    modifyAssetProperty(assetID, '发令人', property.Value);

var property = getTaskGroupProperty('受令人');
if (property)
    modifyAssetProperty(assetID, '受令人', property.Value);

var property = getTaskGroupProperty('执行人');
if (property)
    modifyAssetProperty(assetID, '执行人', property.Value);

var property = getTaskGroupProperty('监护人');
if (property)
    modifyAssetProperty(assetID, '监护人', property.Value);

var property = getTaskGroupProperty('值班负责人');
if (property)
    modifyAssetProperty(assetID, '值班负责人', property.Value);

var property = getTaskGroupProperty('操作方式');
if (property)
    modifyAssetProperty(assetID, '操作方式', property.Value);

var property = getTaskGroupProperty('操作任务');
if (property)
    modifyAssetProperty(assetID, '操作任务', property.Value);

var property = getTaskGroupProperty('备注');
if (property)
    modifyAssetProperty(assetID, '备注', property.Value);

```

### 活动结束后，获取指定资产的属性并修改属性值

#### 需求描述

流程中，在活动实例结束后，获取指定资产的属性并修改属性值

#### 脚本代码

* 适用于作业组属性更多设置中的流程后脚本

```js
// 获取资产名为“开关1”的顶层资产
var asset = null;
var assetName = '配电柜001';
var url = 'Asset/GetByName?parentID=de94282f-69ef-489b-929d-0eb8e90b3862&name=' + assetName;
var result = imClient.Get(url);
var resultObj = JSON.parse(result);
if (resultObj) {
    if (resultObj.IsOk) {
        asset = resultObj.Response;
        imLogWriter.WriteError('获取资产 调用成功，返回数据为：' + JSON.stringify(asset));
    }
    else {
        imLogWriter.WriteError('获取资产 调用成功，但返回错误，错误信息为：' + resultObj.ErrorMsg);
    }
}
else {
    imLogWriter.WriteError('获取资产 调用失败，返回为：' + result);
}

// 获取上述资产的“attrCategory”属性
if (asset) {
    var assetProperty = null;
    var url = 'Asset/GetAssetProperty?assetID=' + asset.ID + '&propertyName=attrCategory';
    var result = imClient.Get(url);
    var resultObj = JSON.parse(result);
    if (resultObj) {
        if (resultObj.IsOk) {
            assetProperty = resultObj.Response;
            imLogWriter.WriteError('获取资产属性 调用成功，返回数据为：' + JSON.stringify(assetProperty));
        }
        else {
            imLogWriter.WriteError('获取资产属性 调用成功，但返回错误，错误信息为：' + resultObj.ErrorMsg);
        }
    }
    else {
        imLogWriter.WriteError('获取资产属性调用失败，返回为：' + result);
    }

    if (assetProperty) {
        // 把这个资产属性的值改为“860模板”
        var url = 'Asset/UpdateAssetPropertyValue?propertyID=' + assetProperty.ID + '&propertyValue=860模板';
        var result = imClient.Put(url);
        var resultObj = JSON.parse(result);
        if (resultObj) {
            if (resultObj.IsOk) {
                imLogWriter.WriteError('修改资产属性的值 调用成功，返回数据为：' + JSON.stringify(resultObj.Response));
            }
            else {
                imLogWriter.WriteError('修改资产属性的值 调用成功，但返回错误，错误信息为：' + resultObj.ErrorMsg);
            }
        }
        else {
            imLogWriter.WriteError('修改资产属性的值 调用失败，返回为：' + result);
        }
    }
    
    var assetProperty = null;
    var url1 = 'Asset/GetAssetProperty?assetID=' + asset.ID + '&propertyName=attrName';
    var result = imClient.Get(url1);
    var resultObj = JSON.parse(result);
    if (resultObj) {
        if (resultObj.IsOk) {
            assetProperty = resultObj.Response;
            imLogWriter.WriteError('获取资产属性 调用成功，返回数据为：' + JSON.stringify(assetProperty));
        }
        else {
            imLogWriter.WriteError('获取资产属性 调用成功，但返回错误，错误信息为：' + resultObj.ErrorMsg);
        }
    }
    else {
        imLogWriter.WriteError('获取资产属性调用失败，返回为：' + result);
    }

    if (assetProperty) {
        // 把这个资产属性的值改为“860模板属性”
        var url1 = 'Asset/UpdateAssetPropertyValue?propertyID=' + assetProperty.ID + '&propertyValue=860模板属性';
        var result = imClient.Put(url1);
        var resultObj = JSON.parse(result);
        if (resultObj) {
            if (resultObj.IsOk) {
                imLogWriter.WriteError('修改资产属性的值 调用成功，返回数据为：' + JSON.stringify(resultObj.Response));
            }
            else {
                imLogWriter.WriteError('修改资产属性的值 调用成功，但返回错误，错误信息为：' + resultObj.ErrorMsg);
            }
        }
        else {
            imLogWriter.WriteError('修改资产属性的值 调用失败，返回为：' + result);
        }
    }
    
    var assetProperty = null;
    var url1 = 'Asset/GetAssetProperty?assetID=' + asset.ID + '&propertyName=qrCode';
    var result = imClient.Get(url1);
    var resultObj = JSON.parse(result);
    if (resultObj) {
        if (resultObj.IsOk) {
            assetProperty = resultObj.Response;
            imLogWriter.WriteError('获取资产属性 调用成功，返回数据为：' + JSON.stringify(assetProperty));
        }
        else {
            imLogWriter.WriteError('获取资产属性 调用成功，但返回错误，错误信息为：' + resultObj.ErrorMsg);
        }
    }
    else {
        imLogWriter.WriteError('获取资产属性调用失败，返回为：' + result);
    }

    if (assetProperty) {
        // 把这个资产属性的值改为“PDG001”
        var url1 = 'Asset/UpdateAssetPropertyValue?propertyID=' + assetProperty.ID + '&propertyValue=PDG001';
        var result = imClient.Put(url1);
        var resultObj = JSON.parse(result);
        if (resultObj) {
            if (resultObj.IsOk) {
                imLogWriter.WriteError('修改资产属性的值 调用成功，返回数据为：' + JSON.stringify(resultObj.Response));
            }
            else {
                imLogWriter.WriteError('修改资产属性的值 调用成功，但返回错误，错误信息为：' + resultObj.ErrorMsg);
            }
        }
        else {
            imLogWriter.WriteError('修改资产属性的值 调用失败，返回为：' + result);
        }
    }
}

```

### 根据指定作业组属性的列表项值和参与人员的选择数量生成多个计划，并根据参与人员的值为每一个计划指定一个执行人

#### 需求描述

根据作业组属性试题的列表项值和作业组属性必须参与人员及非必须参与人员中选择的人员数量生成多个计划，重复人员不重复创建，并根据参与人员+非必须参与人员的值为生成的每一个计划指定好执行人

#### 脚本代码

* 适用于作业组属性更多设置中的流程后脚本

```js
// 获取当前作业组所有属性
    var taskGroupPropertyList = null;
    var url = 'Report/GetTaskGroupProperties?taskGroupID=' + curTaskGroup.ID;
    var result = imClient.Get(url);
    var resultObj = JSON.parse(result);
    if (resultObj) {
        if (resultObj.IsOk) {
            taskGroupPropertyList = resultObj.Response;
        }
        else {
            imLogWriter.WriteError('获取当前作业组所有属性 调用成功，但返回错误，错误信息为：' + resultObj.ErrorMsg);
        }
    }
    else {
        imLogWriter.WriteError('获取当前作业组所有属性 调用失败，返回为：' + result);
    }

    // 拿出需要用到的作业组属性，对创建出的作业组里指定的几个属性赋值
    var createOrderProperty = null;
    var examListID = null;
    var requiredUsers = [];
    var unrequiredUsers = [];
    var newTaskGroupProperties = [];
    if (taskGroupPropertyList && taskGroupPropertyList.length > 0) {
        for (var index = 0; index < taskGroupPropertyList.length; index++) {
            var tp = taskGroupPropertyList[index];
            if (tp.Name == '创建的工单')
                createOrderProperty = tp;
            else if (tp.Name == '试题')
                examListID = tp.Value;
            else if (tp.Name == '必须参与人' && tp.Value)
                requiredUsers = tp.Value.split(',');
            else if (tp.Name == '非必须参与人' && tp.Value)
                unrequiredUsers = tp.Value.split(',');
            else if (tp.Name == '培训讲师' || tp.Name == '培训内容')    //赋值
                newTaskGroupProperties.push({ PropertyName: tp.Name, Value: tp.Value });
        }
    }

    // 来源工单 属性，当前作业组的信息写到创建的作业组此属性中
    var source = { ID: curTaskGroup.ID, Name: curTaskGroup.Name };
    newTaskGroupProperties.push({ PropertyName: '来源工单', Value: JSON.stringify(source) });

    // 根据列表项ID获取试卷名称，上面的examListID
    var examName = '';
    var url = 'UserDefinedList/GetByID?id=' + examListID;
    var result = imClient.Get(url);
    var resultObj = JSON.parse(result);
    if (resultObj) {
        if (resultObj.IsOk) {
            examName = resultObj.Response.Name;
        }
        else {
            imLogWriter.WriteError('根据列表项ID获取试卷名称 调用成功，但返回错误，错误信息为：' + resultObj.ErrorMsg);
        }
    }
    else {
        imLogWriter.WriteError('根据列表项ID获取试卷名称 调用失败，返回为：' + result);
    }

    // 根据作业组模板名称得到要创建的作业组模板，上面的examName
    var taskGroupTemplate = null;
    var url = 'TaskGroupTemplate/GetByName?name=' + examName;
    var result = imClient.Get(url);
    var resultObj = JSON.parse(result);
    if (resultObj) {
        if (resultObj.IsOk) {
            taskGroupTemplate = resultObj.Response;
        }
        else {
            imLogWriter.WriteError('根据作业组模板名称 ' + examName + ' 得到要创建的作业组模板 调用成功，但返回错误，错误信息为：' + resultObj.ErrorMsg);
        }
    }
    else {
        imLogWriter.WriteError('根据作业组模板名称 ' + examName + ' 得到要创建的作业组模板 调用失败，返回为：' + result);
    }


    if (!taskGroupTemplate) {
        imLogWriter.WriteError('“' + examName + '” 作业组模板不存在，无法创建计划');
    }
    else {
        var createTgs = [];
        var allUsers = requiredUsers.concat(unrequiredUsers);
        var createdUserIDs = [];
        for (var index = 0; index < allUsers.length; index++) { //遍历循环，选了多少用户
            var userName = allUsers[index];
            var userID = '';

            // 根据登录名得到用户ID
            var url = 'UserConfig/GetID?loginName=' + userName;
            var result = imClient.Get(url);
            var resultObj = JSON.parse(result);
            if (resultObj) {
                if (resultObj.IsOk) {
                    userID = resultObj.Response;
                }
                else {
                    imLogWriter.WriteError('根据登录名 ' + userName + ' 得到用户ID 调用成功，但返回错误，错误信息为：' + resultObj.ErrorMsg);
                }
            }
            else {
                imLogWriter.WriteError('根据登录名 ' + userName + ' 得到用户ID 调用失败，返回为：' + result);
            }
            if (userID && createdUserIDs.indexOf(userID) < 0) {
                // 构造创建计划的参数，指定执行人=选择了的人员
                var startTime = lib.System.DateTime.Now.AddHours(1).ToString('yyyy-MM-dd HH:mm:ss');
                var endtime = lib.System.DateTime.Now.AddHours(3).ToString('yyyy-MM-dd HH:mm:ss');
                var modifyName = taskGroupTemplate.Name + ' - ' + userName;
                var modifyDesc = taskGroupTemplate.Description + ' - ' + userName;
                var plan = {
                    TaskGroupID: taskGroupTemplate.ID,
                    PlanStatus: 2,
                    Name: taskGroupTemplate.Name,
                    IsModifyTaskGroupNameDescription: true,
                    ModifyTaskGroupName: modifyName,
                    ModifyTaskGroupDescription: modifyDesc,
                    ActorValidFlag: 1,
                    FActor: {
                        ActorUserList: [{
                            UserID: userID,
                            UserOperator: '等于'
                        }]
                    },
                    PlanTime: {
                        StartTime: startTime,
                        EndTime: endtime,
                        RepeatedModeType: 1,
                        RepeatedRange: {
                            EndTimeType: 1
                        }
                    },
                    SetTaskGroupProperties: JSON.stringify(newTaskGroupProperties)
                };

                // 调用接口创建计划，必须参与人员和非必须参与人员选择了重复的人员时只记录一次            
                var result = imClient.Post('Schedule/CreateTaskGroup', JSON.stringify(plan));
                var resultObj = JSON.parse(result);
                if (resultObj) {
                    if (resultObj.IsOk) {
                        createdUserIDs.push(userID);
                        createTgs.push({ ID: resultObj.Response.TaskGroupID, Name: modifyName })
                    }
                    else {
                        imLogWriter.WriteError('创建计划 调用成功，但返回错误，错误信息为：' + resultObj.ErrorMsg);
                    }
                }
                else {
                    imLogWriter.WriteError('创建计划 调用失败，返回为：' + result);
                }
            }
        }

        // 把创建的作业组信息写入到当前作业组的“创建的工单”的属性中
        if (createTgs.length > 0 && createOrderProperty) {
            var url = 'Report/ModifyTaskGroupPropertyValueByName?id=' + curTaskGroup.ID + '&propertyName=创建的工单&value=' + encodeURIComponent(JSON.stringify(createTgs));
            var result = imClient.Put(url);
            var resultObj = JSON.parse(result);
            if (resultObj) {
                if (resultObj.IsOk) {
                }
                else {
                    imLogWriter.WriteError('修改作业组属性 调用成功，但返回错误，错误信息为：' + resultObj.ErrorMsg);
                }
            }
            else {
                imLogWriter.WriteError('修改作业组属性 调用失败，返回为：' + result);
            }
        }
    }
```
